--- a/css/styles.css
+++ b/css/styles.css
@@ -11912,6 +11912,43 @@ body {
   min-height: 100vh;
 }
 
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -ms-overflow-style: scrollbar;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 #content-wrap {
   padding-bottom: 135.5px;
+}
+
+s, strike {
+  text-decoration: none;
+  position: relative;
+}
+
+s::before, strike::before {
+  top: 50%;
+  /*tweak this to adjust the vertical position if it's off a bit due to your font family */
+  background: red;
+  /*this is the color of the line*/
+  opacity: 0.7;
+  content: "";
+  width: 110%;
+  position: absolute;
+  height: 0.1em;
+  border-radius: 0.1em;
+  left: -5%;
+  white-space: nowrap;
+  display: block;
+  transform: rotate(-15deg);
+}
+
+s.straight::before, strike.straight::before {
+  transform: rotate(0deg);
+  left: -1%;
+  width: 102%;
 }
